--- a/main.css
+++ b/main.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap');
 
+    /*<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>*/
+
 *{
     margin: 0;
     padding: 0;
@@ -11,7 +13,7 @@ body{
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: url('Img_Video/Img/LoginImg.jpg') no-repeat;
+    background: url('Img/LoginImg.jpg') no-repeat;
     background-size: cover;
     background-position: center;
     
@@ -120,4 +122,3 @@ body{
     text-decoration: underline;
     transform: scale(1.02);
 }
-
