--- a/Page/css/BootCampMMG.css
+++ b/Page/css/BootCampMMG.css
@@ -18,7 +18,7 @@ html, body{
 #Navigation{
     height : 110px;
     width : 100%;
-    background-image: url('../Img/fond3.jpg');
+    background-image: url('../../Img/fond3.jpg');
     background-size: cover; 
     background-repeat: no-repeat;
     display: flex; /* Affiche les éléments horizontalement */
@@ -147,6 +147,50 @@ button{
 
 
 
+  .card {
+    position: relative;
+    width: 400px;
+    height: 250px;
+    overflow: hidden;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  }
+  
+  .card img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transition: 0.5s ease;
+  }
+  
+  .card-content {
+    width: 90%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    text-align: center;
+    opacity: 0;
+    transition: 0.5s ease;
+    padding: 20px;
+    background: rgba(0, 0, 0, 0.6);
+    border-radius: 10px;
+  }
+  
+  .card:hover img {
+    filter: blur(5px);
+  }
+  
+  .card:hover .card-content {
+    opacity: 1;
+  }
+
+
+
+
+
+
 
   /* Conteneur de la vidéo avec effet de lumière */
 .video-container {
@@ -182,3 +226,39 @@ button{
   height: 500px;
   border-radius: 70px;
 }
+
+
+
+
+
+
+
+
+
+
+/*
+
+.card::after{
+  content: "";
+  position: absolute;
+  inset: 0;
+  border: 2px solid white;
+  border-radius: inherit;
+  opacity: 0;
+  transition: 0.4s ease-in-out;
+}
+.card:hover img{
+  filter: grayscale(1) brightness(0.4);
+}
+.card:hover::after{
+  opacity: 1;
+  inset: 20px;
+}
+.content{
+  width: 80%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+}*/
